fix: more visible progress bar background

--- a/src/components/progress-bar/ProgressBar.module.css
+++ b/src/components/progress-bar/ProgressBar.module.css
@@ -3,7 +3,7 @@
 
   height: 100%;
 
-  background: var(--background);
+  background: var(--buttonActiveBackground);
   border-radius: var(--borderRadius);
 }
 
